...
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="geofence_title">Geofence</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="reminder_deleted">Reminder Deleted !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the Location Reminder App</string>
    <string name="login">SIGN IN</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
...
